force-app/main/default/objects/Asana_PS_Configuration__c/Asana_PS_Configuration__c.object-meta.xml
<CustomObject>
    <description>MKT26-669: Object to save Salesforce-Asana Integration Settings</description>
    <label>Asana PS Configuration</label>
    <nameField>
        <label>Asana PS Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asana PS Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>