force-app/main/default/objects/Asana_PS_Configuration__c/fields/Asana_Section_template_Id__c.field-meta.xml
<CustomField>
    <fullName>Asana_Section_template_Id__c</fullName>
    <label>Asana Section template Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>