force-app/main/default/objects/Asana_PS_Configuration__c/fields/Is_PS_SKU__c.field-meta.xml
<CustomField>
    <fullName>Is_PS_SKU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to check if SKU is PS or Not</description>
    <label>Is PS SKU?</label>
    <type>Checkbox</type>
</CustomField>