force-app/main/default/objects/Asana_PS_Configuration__c/fields/Quantity_or_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Quantity_or_Subscription__c</fullName>
    <label>Quantity or Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>