force-app/main/default/objects/Asana_PS_Configuration__c/fields/Task_Label__c.field-meta.xml
<CustomField>
    <fullName>Task_Label__c</fullName>
    <description>Text to store Task Label</description>
    <label>Task Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>