force-app/main/default/objects/Asana_PS_Configuration__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Resident Engineer</fullName>
            </value>
            <value>
                <fullName>Customer Experience Manager</fullName>
            </value>
            <value>
                <fullName>Accelerator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>